--- a/xdn-next-example/styles/LoadingIndicator.module.css
+++ b/xdn-next-example/styles/LoadingIndicator.module.css
@@ -1,5 +1,5 @@
 .container {
-  top: 2px
+  top: 0
 }
 .shim {
   position: relative;
